--- a/package.json
+++ b/package.json
@@ -7,12 +7,17 @@
     "start": "node app.js",
     "dev": "nodemon app.js"
   },
+  "engines": {
+    "node": "20.x"
+  },
   "author": "",
   "license": "ISC",
   "dependencies": {
     "cors": "^2.8.5",
+    "dotenv": "^16.4.7",
     "express": "^4.21.2",
-    "mongoose": "^8.10.1"
+    "jwt-simple": "^0.5.6",
+    "mongoose": "^8.11.0"
   },
   "devDependencies": {
     "nodemon": "^3.1.9"
