Initial commit for M06_Tutorial_Backend

--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
   "main": "app.js",
   "scripts": {
     "start": "node app.js",
+    "server": "nodemon app.js",
+    "test": "echo \"Error: np test specified\" && exit 1",
     "dev": "nodemon app.js"
   },
   "engines": {
